--- a/testphoto/index.html
+++ b/testphoto/index.html
@@ -1,121 +1,138 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <title>许我耀眼 - 播放器</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #f5f5f5; text-align: center; }
-    h2 { margin-top: 20px; }
-    .playlist { margin: 20px auto; width: 80%; display: flex; flex-wrap: wrap; justify-content: center; }
-    .playlist button {
-      margin: 5px;
-      padding: 10px 15px;
-      border: none;
-      background: #4CAF50;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .playlist button:hover { background: #45a049; }
-    iframe { width: 80%; height: 500px; border: none; margin-top: 20px; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>连续剧首页</title>
+<style>
+body {
+  margin: 0;
+  font-family: "微软雅黑", sans-serif;
+  background-color: #0d0d0d;
+  color: #fff;
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
+
+/* 左侧导航栏 */
+.sidebar {
+  width: 200px;
+  background-color: #111;
+  border-right: 1px solid #222;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.sidebar h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 18px;
+}
+.sidebar button {
+  background: none;
+  color: #ccc;
+  border: none;
+  text-align: left;
+  padding: 12px 20px;
+  font-size: 15px;
+  cursor: pointer;
+}
+.sidebar button:hover,
+.sidebar button.active {
+  background-color: #222;
+  color: #fff;
+}
+
+/* 主内容区域 */
+.main {
+  flex: 1;
+  overflow-y: auto;
+  padding: 20px;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 20px;
+}
+.card {
+  background-color: #1a1a1a;
+  border-radius: 8px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 12px rgba(255,255,255,0.2);
+}
+.card img {
+  width: 100%;
+  height: 260px;
+  object-fit: cover;
+}
+.card-title {
+  padding: 10px;
+  font-size: 15px;
+  text-align: center;
+  color: #eee;
+}
+</style>
 </head>
 <body>
-  <h2>《许我耀眼》全集播放</h2>
-  <p>点击集数进行播放：</p>
 
-  <div class="playlist">
-    <button onclick="play(1)">第1集</button>
-    <button onclick="play(2)">第2集</button>
-    <button onclick="play(3)">第3集</button>
-    <button onclick="play(4)">第4集</button>
-    <button onclick="play(5)">第5集</button>
-    <button onclick="play(6)">第6集</button>
-    <button onclick="play(7)">第7集</button>
-    <button onclick="play(8)">第8集</button>
-    <button onclick="play(9)">第9集</button>
-    <button onclick="play(10)">第10集</button>
-    <button onclick="play(11)">第11集</button>
-    <button onclick="play(12)">第12集</button>
-    <button onclick="play(13)">第13集</button>
-    <button onclick="play(14)">第14集</button>
-    <button onclick="play(15)">第15集</button>
-    <button onclick="play(16)">第16集</button>
-    <button onclick="play(17)">第17集</button>
-    <button onclick="play(18)">第18集</button>
-    <button onclick="play(19)">第19集</button>
-    <button onclick="play(20)">第20集</button>
-    <button onclick="play(21)">第21集</button>
-    <button onclick="play(22)">第22集</button>
-    <button onclick="play(23)">第23集</button>
-    <button onclick="play(24)">第24集</button>
-    <button onclick="play(25)">第25集</button>
-    <button onclick="play(26)">第26集</button>
-    <button onclick="play(27)">第27集</button>
-    <button onclick="play(28)">第28集</button>
-    <button onclick="play(29)">第29集</button>
-    <button onclick="play(30)">第30集</button>
-    <button onclick="play(31)">第31集</button>
-    <button onclick="play(32)">第32集</button>
-<button onclick="play(33)">彩蛋1</button>
-<button onclick="play(34)">彩蛋2</button>
-<button onclick="play(35)">彩蛋3</button>
-<button onclick="play(36)">彩蛋4</button>
-  </div>
+<div class="sidebar">
+  <h2>分类</h2>
+  <button class="active" onclick="filterCategory('全部')">全部</button>
+  <button onclick="filterCategory('都市')">都市</button>
+  <button onclick="filterCategory('古装')">古装</button>
+  <button onclick="filterCategory('爱情')">爱情</button>
+  <button onclick="filterCategory('奇幻')">奇幻</button>
+  <button onclick="filterCategory('悬疑')">悬疑</button>
+</div>
 
-  <div id="player"></div>
-  
-  <a class="vip-link" href="https://ljt462625949.github.io/testphoto/sousuo" target="_blank">
-    🔗 前往 VIP 视频解析播放
-  </a>
+<div class="main">
+  <div class="grid" id="dramaGrid"></div>
+</div>
 
-  <script>
-    const urls = {
-      1: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/j41019jzasn.html",
-      2: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/b41016yvfw9.html",
-      3: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/w4101fm48ch.html",
-      4: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/l4101zpocd5.html",
-      5: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/z4101jwgaiz.html",
-      6: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/a410191fgc6.html",
-      7: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/b4101qhoay0.html",
-      8: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/j410188nwtd.html",
-      9: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/c41012fpf35.html",
-      10:"https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/l4101aro09k.html",
-      11:"https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/g4101dyju84.html",
-      12:"https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/q41010m0c8v.html",
-      13: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/d4101ly9ocy.html",
-      14: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/w41019awqyi.html",
-      15: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/b4101xc0cfy.html",
-      16: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/d4101yai5cm.html",
-      17: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/d4101xue32n.html",
-      18: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/i4101m3ohh1.html",
-      19: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/q410131g94f.html",
-      20:"https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/m4101ee4ww6.html",
-      21: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/i41014m26rl.html",
-      22: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/f4101z2fzf3.html",
-      23: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/f41019myzjq.html",
-      24: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/o41019apja0.html",
-      25: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/i4101vhcru7.html",
-      26: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/z4101thanpb.html",
-      27: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/z4101rai2m7.html",
-      28: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/s41012q3hmg.html",
-      29: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/n4101cjvag8.html",
-      30:"https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/g4101moiizf.html",
-      31: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/t41011onk2h.html",
-      32: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/q4101zky8bc.html",
-      33: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/y41010qdb29.html",
-      34: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/x4101ys8xjs.html",
-      35: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/j4101vxs574.html",
-      36: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc00200f19q8q5/l4101q796rr.html"
+<script>
 
-    };
+let dramas = [];
 
-    function play(ep) {
-      let url = urls[ep];
-      document.getElementById("player").innerHTML =
-        `<iframe src="${url}" allowfullscreen></iframe>`;
-    }
-  </script>
+async function loadDramas() {
+  const res = await fetch("https://raw.githubusercontent.com/erik7761269084-arch/-/main/video/category/2025_dl_lxj.json");
+  dramas = await res.json();
+  renderDramas(dramas);
+}
+
+loadDramas();
+
+
+function renderDramas(list) {
+  const container = document.getElementById('dramaGrid');
+  container.innerHTML = '';
+  list.forEach(d => {
+    const card = document.createElement('div');
+    card.className = 'card';
+    card.onclick = () => window.location.href = d.title_play_url;
+    card.innerHTML = `
+      <img src="${d.cover_url}" alt="${d.title}">
+      <div class="card-title">${d.title}</div>
+    `;
+    container.appendChild(card);
+  });
+}
+
+function filterCategory(cat) {
+  document.querySelectorAll('.sidebar button').forEach(b => b.classList.remove('active'));
+  event.target.classList.add('active');
+  if (cat === '全部') renderDramas(dramas);
+  else renderDramas(dramas.filter(d => d.category === cat));
+}
+
+// 初始加载
+renderDramas(dramas);
+</script>
+
 </body>
 </html>
