--- a/testphoto/cwzdcqq.html
+++ b/testphoto/cwzdcqq.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>月升沧海 - 播放器</title>
+  <title>传闻中的陈芊芊 - 播放器</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f5f5f5; text-align: center; }
     h2 { margin-top: 20px; }
