--- a/testphoto/hutong.html
+++ b/testphoto/hutong.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body>
-  <h2>《月升沧海1-27 星汉灿烂28-56》全集播放</h2>
+  <h2>《后浪》全集播放</h2>
   <p>点击集数进行播放：</p>
 
   <div class="playlist">
@@ -56,32 +56,7 @@
     <button onclick="play(28)">第28集</button>
     <button onclick="play(29)">第29集</button>
     <button onclick="play(30)">第30集</button>
-    <button onclick="play(31)">第31集</button>
-    <button onclick="play(32)">第32集</button>
-	<button onclick="play(33)">第33集</button>
-	<button onclick="play(34)">第34集</button>
-	<button onclick="play(35)">第35集</button>
-	<button onclick="play(36)">第36集</button>
-	<button onclick="play(37)">第37集</button>
-    <button onclick="play(38)">第38集</button>
-	<button onclick="play(39)">第39集</button>
-	<button onclick="play(40)">第40集</button>
-    <button onclick="play(41)">第41集</button>
-    <button onclick="play(42)">第42集</button>
-    <button onclick="play(43)">第43集</button>
-    <button onclick="play(44)">第44集</button>
-    <button onclick="play(45)">第45集</button>
-    <button onclick="play(46)">第46集</button>
-    <button onclick="play(47)">第47集</button>
-    <button onclick="play(48)">第48集</button>
-    <button onclick="play(49)">第49集</button>
-    <button onclick="play(50)">第50集</button>
-    <button onclick="play(51)">第51集</button>
-    <button onclick="play(52)">第52集</button>
-    <button onclick="play(53)">第53集</button>
-    <button onclick="play(54)">第54集</button>
-    <button onclick="play(55)">第55集</button>
-    <button onclick="play(56)">第56集</button>
+ 
  
   </div>
 
@@ -93,42 +68,36 @@
 
   <script>
     const urls = {
-      1: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/x00444d3qj1.html",
-      2: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/g00443e8432.html",
-      3: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/a0044x244cu.html",
-      4: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/h0044uo68ur.html",
-      5: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/c0044z4jtbn.html",
-      6: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/e0044lznhbr.html",
-      7: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/j0044kdesw0.html",
-      8: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/e0044t5anol.html",
-      9: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/x0044579h8q.html",
-      10:"https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/n0044kozynx.html",
-      11:"https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/c0044umlvuq.html",
-      12:"https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/n0044pz7ewi.html",
-      13: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/c004454un31.html",
-      14: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/x0044kj2n9s.html",
-      15: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/n00440sgrq3.html",
-      16: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/g0044x01gr4.html",
-      17: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/b00440blec6.html",
-      18: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/q0044l4s931.html",
-      19: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/a0044t0z2p6.html",
-      20:"https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/s0044fpa26c.html",
-      21: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/o00441wm5mq.html",
-      22: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/p00448otin5.html",
-      23: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/v004479mrwc.html",
-      24: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/s0044tmxlpy.html",
-      25: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/x0044yh41gv.html",
-      26: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/p0044kmkwgz.html",
-      27: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/d0044k745de.html",
-      28: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/p0044qcq47i.html",
-      29: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/n0044l868xe.html",
-      30: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/r0044hgjznv.html",
-      31: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/v0044jl3tjp.html",
-      32: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/g0044apb6d0.html",
-      33: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/g0044l2bqy6.html",
-      34: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/x0044dvfwp4.html",
-      35: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/j0044pnoeh1.html",
-      36: "https://jx.xmflv.com/?url=https://v.qq.com/x/cover/mzc002001mdwbhu/n0044r61kmk.html"
+      1: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0Nzc1MTg1Mg==.html?s=decf386f28c24ee4bac6",
+      2: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0NjI5ODM0MA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0NjI5ODM0MA==&spm=a2hkt.13141534.1_7.d_2_2",
+      3: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0NjQxNzg0NA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0NjQxNzg0NA==&spm=a2hkt.13141534.1_7.d_2_3",
+      4: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0ODQ4OTM3Ng==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0ODQ4OTM3Ng==&spm=a2hkt.13141534.1_7.d_2_4",
+      5: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0ODkzNzIyNA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0ODkzNzIyNA==&spm=a2hkt.13141534.1_7.d_2_5",
+      6: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0ODkzNzIyOA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0ODkzNzIyOA==&spm=a2hkt.13141534.1_7.d_2_6",
+      7: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0NzA3MDY0OA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0NzA3MDY0OA==&spm=a2hkt.13141534.1_7.d_2_7",
+      8: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0OTA4NTg2NA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0OTA4NTg2NA==&spm=a2hkt.13141534.1_7.d_2_8",
+      9: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0NzE0OTU4MA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0NzE0OTU4MA==&spm=a2hkt.13141534.1_7.d_2_9",
+      10:"https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0NzE0OTU4NA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0NzE0OTU4NA==&spm=a2hkt.13141534.1_7.d_2_10",
+      11:"https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0OTg1MzYwOA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0OTg1MzYwOA==&spm=a2hkt.13141534.1_7.d_2_11",
+      12:"https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0Nzk0Mjk3Mg==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0Nzk0Mjk3Mg==&spm=a2hkt.13141534.1_7.d_2_12",
+      13: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0ODI3NTQ5Mg==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0ODI3NTQ5Mg==&spm=a2hkt.13141534.1_7.d_2_13",
+      14: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0ODI3Njg1Mg==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0ODI3Njg1Mg==&spm=a2hkt.13141534.1_7.d_2_14",
+      15: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0ODM5MzY2MA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0ODM5MzY2MA==&spm=a2hkt.13141534.1_7.d_2_15",
+      16: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0ODM4NzgzNg==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0ODM4NzgzNg==&spm=a2hkt.13141534.1_7.d_2_16",
+      17: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MDk3NDEwNA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MDk3NDEwNA==&spm=a2hkt.13141534.1_7.d_2_17",
+      18: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0OTA1MzMwNA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0OTA1MzMwNA==&spm=a2hkt.13141534.1_7.d_2_18",
+      19: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk0OTA1MzMwMA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk0OTA1MzMwMA==&spm=a2hkt.13141534.1_7.d_2_19",
+      20:"https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MDk3NDEwOA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MDk3NDEwOA==&spm=a2hkt.13141534.1_7.d_2_20",
+      21: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MTUzNDQwNA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MTUzNDQwNA==&spm=a2hkt.13141534.1_7.d_2_21",
+      22: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MTU5ODc2MA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MTU5ODc2MA==&spm=a2hkt.13141534.1_7.d_2_22",
+      23: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MzUyNjI4OA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MzUyNjI4OA==&spm=a2hkt.13141534.1_7.d_2_23",
+      24: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MTU5ODc1Ng==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MTU5ODc1Ng==&spm=a2hkt.13141534.1_7.d_2_24",
+      25: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MzUyNjI4NA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MzUyNjI4NA==&spm=a2hkt.13141534.1_7.d_2_25",
+      26: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MTk1ODY0MA==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MTk1ODY0MA==&spm=a2hkt.13141534.1_7.d_2_26",
+      27: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MjE4NjExNg==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MjE4NjExNg==&spm=a2hkt.13141534.1_7.d_2_27",
+      28: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MTk1ODYzMg==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MTk1ODYzMg==&spm=a2hkt.13141534.1_7.d_2_28",
+      29: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MTk1ODYzNg==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MTk1ODYzNg==&spm=a2hkt.13141534.1_7.d_2_29",
+      30: "https://jx.xmflv.com/?url=https://v.youku.com/v_show/id_XNTk1MjAwMjEzMg==.html?s=decf386f28c24ee4bac6&scm=20140719.apircmd.298496.video_XNTk1MjAwMjEzMg==&spm=a2hkt.13141534.1_7.d_2_30"
 	  
     };
 
