--- a/JAV/header.html
+++ b/JAV/header.html
@@ -16,7 +16,7 @@
 		<a href="/JAV/FC2">日本FC2</a>
 		<a href="/JAV/actress">日本女优</a>
 		<a href="/JAV/company">A片出品厂</a>
-		<a href="/JAV/tag_subtitle" class="bold">标签分类</a>
+		<a href="/JAV/tag_all/tag_subtitle" class="bold">标签分类</a>
 		<a href="https://t.me/yunvgongJAV" target="_blank">电报群</a>
   </nav>
 </div>
