--- a/JAV/tag_all/tag_subtitle.html
+++ b/JAV/tag_all/tag_subtitle.html
@@ -83,20 +83,20 @@ fetch('header.html')
 //                标签字典（完整 URL）
 // -----------------------------------------------
 const tags = {
-    "乱交": "https://yunvgong.com/JAV/tag_promiscuity",
-    "素人": "https://yunvgong.com/JAV/tag_Amateur",
-    "巨乳": "https://yunvgong.com/JAV/tag_bigBreasts",
-    "嫩妹": "https://yunvgong.com/JAV/tag_youngGirl",
-    "少妇": "https://yunvgong.com/JAV/tag_youngWoman",
-    "出道作": "https://yunvgong.com/JAV/tag_DebutWork",
-    "高清画质": "https://yunvgong.com/JAV/tag_HD",
-    "痴汉": "https://yunvgong.com/JAV/tag_pervert",
-    "女同": "https://yunvgong.com/JAV/tag_Lesbian",
-    "淫妻": "https://yunvgong.com/JAV/tag_adulterousWife",
-    "乱伦": "https://yunvgong.com/JAV/tag_incest",
-    "人妻": "https://yunvgong.com/JAV/tag_wife",
-    "孕妇": "https://yunvgong.com/JAV/tag_pregnantWomen",
-    "奶妈": "https://yunvgong.com/JAV/tag_wetNurse"
+    "乱交": "https://yunvgong.com/JAV/tag_all/tag_promiscuity",
+    "素人": "https://yunvgong.com/JAV/tag_all/tag_Amateur",
+    "巨乳": "https://yunvgong.com/JAV/tag_all/tag_bigBreasts",
+    "嫩妹": "https://yunvgong.com/JAV/tag_all/tag_youngGirl",
+    "少妇": "https://yunvgong.com/JAV/tag_all/tag_youngWoman",
+    "出道作": "https://yunvgong.com/JAV/tag_all/tag_DebutWork",
+    "高清画质": "https://yunvgong.com/JAV/tag_all/tag_HD",
+    "痴汉": "https://yunvgong.com/JAV/tag_all/tag_pervert",
+    "女同": "https://yunvgong.com/JAV/tag_all/tag_Lesbian",
+    "淫妻": "https://yunvgong.com/JAV/tag_all/tag_adulterousWife",
+    "乱伦": "https://yunvgong.com/JAV/tag_all/tag_incest",
+    "人妻": "https://yunvgong.com/JAV/tag_all/tag_wife",
+    "孕妇": "https://yunvgong.com/JAV/tag_all/tag_pregnantWomen",
+    "奶妈": "https://yunvgong.com/JAV/tag_all/tag_wetNurse"
 };
 
 // 生成标签按钮
