--- a/JAV/tag_all/tag_subtitle.html
+++ b/JAV/tag_all/tag_subtitle.html
@@ -65,7 +65,7 @@
 // -----------------------------------------------
 //                加载 header.html
 // -----------------------------------------------
-fetch('header.html')
+fetch('../header.html') 
   .then(res => res.text())
   .then(html => {
     document.getElementById('header-placeholder').innerHTML = html;
