--- a/JAV/tag_all/tag_pregnantWomen.html
+++ b/JAV/tag_all/tag_pregnantWomen.html
@@ -82,7 +82,7 @@ function initPage(){
 /* -------------------------------
             Header 载入
 -------------------------------- */
-fetch('header.html')
+fetch('../header.html') 
   .then(res => res.text())
   .then(html => {
     document.getElementById('header-placeholder').innerHTML = html;
