--- a/JAV/tag_all/tag_wetNurse.html
+++ b/JAV/tag_all/tag_wetNurse.html
@@ -19,7 +19,7 @@ body { margin:0; font-family:"å¾®è½¯é›…é»‘",sans-serif; background:#0d0d0d; colo
 .card-info-bottom { display:flex; justify-content:space-between; font-size:12px; color:#ccc; }
 .star { color:gold; }
 .date { display:flex; align-items:center; gap:4px; }
-.date::before { content:"ğŸ“…"; }
+.date::before { content:"í ½í³…"; }
 .pagination { display:flex; justify-content:center; align-items:center; gap:10px; padding:20px 0; }
 .pagination button { padding:6px 12px; background:#333; color:#fff; border:none; border-radius:4px; cursor:pointer; }
 .pagination button:hover:not(:disabled) { background:#555; }
@@ -86,6 +86,12 @@ fetch('../header.html')
   .then(res => res.text())
   .then(html => {
     document.getElementById('header-placeholder').innerHTML = html;
+
+    // â­ æ‰‹åŠ¨åŠ è½½ header.css
+    const link = document.createElement('link');
+    link.rel = 'stylesheet';
+    link.href = '../header.css';
+    document.head.appendChild(link);
 
     const script = document.createElement('script');
     script.src = '../header.js';
@@ -174,7 +180,7 @@ function changePage(p){
 }
 
 /* -------------------------------
-        ğŸš€ é¡µé¢å¯åŠ¨å…¥å£
+        í ½íº€ é¡µé¢å¯åŠ¨å…¥å£
 -------------------------------- */
 loadMaxPage();
 </script>
