--- a/JAV/tag_all/tag_subtitle.html
+++ b/JAV/tag_all/tag_subtitle.html
@@ -12,6 +12,14 @@
         color: #fff;
         padding-top: 60px; /* 预留 Header 高度 */
     }
+/* 固定 header */
+#header-placeholder {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
 
     .header {
         padding: 20px;
